samples/_failures_safe/1761290765_85ee55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_939007fc.c: In function ‘main’:
./samples/SAFE/__tmp_939007fc.c:128:9: error: expected expression at end of input
  128 |         } else
      |         ^
./samples/SAFE/__tmp_939007fc.c:128:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_939007fc.c:128:9: error: expected declaration or statement at end of input
